[gd_scene load_steps=3 format=3 uid="uid://clp3en1p5o5yf"]

[ext_resource type="Theme" uid="uid://b071utsw23u4a" path="res://assets/themes/pull_out_drawer_theme.tres" id="1_s1myi"]
[ext_resource type="Script" uid="uid://dy537k0h4kxud" path="res://scenes/ui/drawers/catalog_item_panel.gd" id="1_scp"]

[node name="CatalogItemPanel" type="PanelContainer"]
custom_minimum_size = Vector2(0, 32)
offset_right = 54.0
offset_bottom = 44.0
theme = ExtResource("1_s1myi")
script = ExtResource("1_scp")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 4

[node name="Header" type="HBoxContainer" parent="VBox"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="TitleLabel" type="Label" parent="VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "Title"

[node name="CountLabel" type="Label" parent="VBox/Header"]
layout_mode = 2
text = "x0"
horizontal_alignment = 2

[node name="DetailLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "Details"

[node name="DescriptionLabel" type="Label" parent="VBox"]
custom_minimum_size = Vector2(0, 6)
layout_mode = 2
text = "Description"
autowrap_mode = 2

[node name="ActionsRow" type="HBoxContainer" parent="VBox"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="StatusLabel" type="Label" parent="VBox"]
layout_mode = 2
vertical_alignment = 1
